--- a/src/app/global/global.component.html
+++ b/src/app/global/global.component.html
@@ -37,8 +37,8 @@
               Για τον επιβάτη
             </button>
             <div ngbDropdownMenu class="dropdown-menu">
-              <a class="dropdown-item" href="#">Ερωτηματολόγιο</a>
-              <a class="dropdown-item" href="#">Απολεσθέντα</a>
+              <a class="dropdown-item" href="erotimatologio">Ερωτηματολόγιο</a>
+              <a class="dropdown-item" href="">Απολεσθέντα</a>
             </div>
           </div>
 
@@ -47,8 +47,141 @@
               For the passenger
             </button>
             <div ngbDropdownMenu class="dropdown-menu">
-              <a class="dropdown-item" href="#">Questionnaire</a>
-              <a class="dropdown-item" href="#">Lost</a>
+              <a class="dropdown-item" href="erotimatologio">Questionnaire</a>
+              <a class="dropdown-item">Lost</a>
+            </div>
+          </div>
+
+          <div class="divider"></div>
+
+          <div *ngIf = 'greek' ngbDropdown class="btn-group">
+            <button ngbDropdownToggle type="button" class="btn btn-info dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="true">
+              Μετακίνηση
+            </button>
+            <div ngbDropdownMenu class="dropdown-menu">
+              <a class="dropdown-item" href="">Γραμμές οδικών συγκοινωνιών(λεωφορεία)</a>
+              <a class="dropdown-item" href="">Γραμμές σταθερών συγκοινωνιών(μετρό)</a>
+              <a class="dropdown-item" href="">Ωράριο λειτοθργίας Νυχτερινών - 24ώρων μέσων</a>
+              <a class="dropdown-item" href="">Πληροφόρηση σε πραγματικό χρόνο</a>
+              <a class="dropdown-item" href="">Σταθμοί μετεπιβίβασης</a>
+            </div>
+          </div>
+
+          <div *ngIf = '!greek' ngbDropdown class="btn-group">
+            <button ngbDropdownToggle type="button" class="btn btn-info dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="true">
+              Movement
+            </button>
+            <div ngbDropdownMenu class="dropdown-menu">
+              <a class="dropdown-item" href="">Questionnaire</a>
+              <a class="dropdown-item">Lost</a>
+            </div>
+          </div>
+
+          <div class="divider"></div>
+
+          <div *ngIf = 'greek' ngbDropdown class="btn-group">
+            <button ngbDropdownToggle type="button" class="btn btn-info dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="true">
+              Εισητήρια - Κάρτες
+            </button>
+            <div ngbDropdownMenu class="dropdown-menu">
+              <a class="dropdown-item" href="">Σημεία έκδοσης στις Οδικές</a>
+              <a class="dropdown-item" href="">Σημεία έκδοσης στις Σταθερές</a>
+              <a class="dropdown-item" href="">Τιμές εισιτηρίων</a>
+              <a class="dropdown-item" href="">Τιμές χρονικών προϊόντων</a>
+            </div>
+          </div>
+
+          <div *ngIf = '!greek' ngbDropdown class="btn-group">
+            <button ngbDropdownToggle type="button" class="btn btn-info dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="true">
+              Tickets - Cards
+            </button>
+            <div ngbDropdownMenu class="dropdown-menu">
+              <a class="dropdown-item" href="">Γραμμές οδικών συγκοινωνιών(λεωφορεία)</a>
+              <a class="dropdown-item" href="">Γραμμές σταθερών συγκοινωνιών(μετρό)</a>
+              <a class="dropdown-item" href="">Ωράριο λειτοθργίας Νυχτερινών - 24ώρων μέσων</a>
+              <a class="dropdown-item" href="">Πληροφόρηση σε πραγματικό χρόνο</a>
+              <a class="dropdown-item" href="">Σταθμοί μετεπιβίβασης</a>
+            </div>
+          </div>
+
+          <div class="divider"></div>
+
+          <div *ngIf = 'greek' ngbDropdown class="btn-group">
+            <button ngbDropdownToggle type="button" class="btn btn-info dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="true">
+              ΑμεΑ
+            </button>
+            <div ngbDropdownMenu class="dropdown-menu">
+              <a class="dropdown-item" href="">Σημεία έκδοσης στις Οδικές</a>
+              <a class="dropdown-item" href="">Σημεία έκδοσης στις Σταθερές</a>
+              <a class="dropdown-item" href="">Τιμές εισιτηρίων</a>
+              <a class="dropdown-item" href="">Τιμές χρονικών προϊόντων</a>
+            </div>
+          </div>
+
+          <div *ngIf = '!greek' ngbDropdown class="btn-group">
+            <button ngbDropdownToggle type="button" class="btn btn-info dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="true">
+              For the Disabled
+            </button>
+            <div ngbDropdownMenu class="dropdown-menu">
+              <a class="dropdown-item" href="">Γραμμές οδικών συγκοινωνιών(λεωφορεία)</a>
+              <a class="dropdown-item" href="">Γραμμές σταθερών συγκοινωνιών(μετρό)</a>
+              <a class="dropdown-item" href="">Ωράριο λειτοθργίας Νυχτερινών - 24ώρων μέσων</a>
+              <a class="dropdown-item" href="">Πληροφόρηση σε πραγματικό χρόνο</a>
+              <a class="dropdown-item" href="">Σταθμοί μετεπιβίβασης</a>
+            </div>
+          </div>
+
+          <div class="divider"></div>
+
+          <div *ngIf = 'greek' ngbDropdown class="btn-group">
+            <button ngbDropdownToggle type="button" class="btn btn-info dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="true">
+              Επικοινωνία
+            </button>
+            <div ngbDropdownMenu class="dropdown-menu">
+              <a class="dropdown-item" href="">Σημεία έκδοσης στις Οδικές</a>
+              <a class="dropdown-item" href="">Σημεία έκδοσης στις Σταθερές</a>
+              <a class="dropdown-item" href="">Τιμές εισιτηρίων</a>
+              <a class="dropdown-item" href="">Τιμές χρονικών προϊόντων</a>
+            </div>
+          </div>
+
+          <div *ngIf = '!greek' ngbDropdown class="btn-group">
+            <button ngbDropdownToggle type="button" class="btn btn-info dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="true">
+              Communication
+            </button>
+            <div ngbDropdownMenu class="dropdown-menu">
+              <a class="dropdown-item" href="">Γραμμές οδικών συγκοινωνιών(λεωφορεία)</a>
+              <a class="dropdown-item" href="">Γραμμές σταθερών συγκοινωνιών(μετρό)</a>
+              <a class="dropdown-item" href="">Ωράριο λειτοθργίας Νυχτερινών - 24ώρων μέσων</a>
+              <a class="dropdown-item" href="">Πληροφόρηση σε πραγματικό χρόνο</a>
+              <a class="dropdown-item" href="">Σταθμοί μετεπιβίβασης</a>
+            </div>
+          </div>
+
+          <div class="divider"></div>
+
+          <div *ngIf = 'greek' ngbDropdown class="btn-group">
+            <button ngbDropdownToggle type="button" class="btn btn-info dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="true">
+              Σχετικά με Εμάς
+            </button>
+            <div ngbDropdownMenu class="dropdown-menu">
+              <a class="dropdown-item" href="">Σημεία έκδοσης στις Οδικές</a>
+              <a class="dropdown-item" href="">Σημεία έκδοσης στις Σταθερές</a>
+              <a class="dropdown-item" href="">Τιμές εισιτηρίων</a>
+              <a class="dropdown-item" href="">Τιμές χρονικών προϊόντων</a>
+            </div>
+          </div>
+
+          <div *ngIf = '!greek' ngbDropdown class="btn-group">
+            <button ngbDropdownToggle type="button" class="btn btn-info dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="true">
+              About us
+            </button>
+            <div ngbDropdownMenu class="dropdown-menu">
+              <a class="dropdown-item" href="">Γραμμές οδικών συγκοινωνιών(λεωφορεία)</a>
+              <a class="dropdown-item" href="">Γραμμές σταθερών συγκοινωνιών(μετρό)</a>
+              <a class="dropdown-item" href="">Ωράριο λειτοθργίας Νυχτερινών - 24ώρων μέσων</a>
+              <a class="dropdown-item" href="">Πληροφόρηση σε πραγματικό χρόνο</a>
+              <a class="dropdown-item" href="">Σταθμοί μετεπιβίβασης</a>
             </div>
           </div>
       
