--- a/src/app/global/global.component.html
+++ b/src/app/global/global.component.html
@@ -1,4 +1,3 @@
-
 <div class="center">
     <div class="oasapic">
         <img src="/assets/oasa1.png" routerLink='' width="70" height="70" title="Main Page">
@@ -25,7 +24,7 @@
     </div>
 </div>
 
-<div class="mpara">
+<div class="mpara center">
     <nav class="navbar navbar-expand-lg navbar-light bg-light"><!--  navbar-dark bg-primary -->
         <button *ngIf='greek' type="button" class="btn btn-primary" routerLink=''>Κεντρική Σελίδα</button>
         <button *ngIf='!greek' type="button" class="btn btn-primary" routerLink=''>Main Page</button>
@@ -59,9 +58,9 @@
               Μετακίνηση
             </button>
             <div ngbDropdownMenu class="dropdown-menu">
-              <a class="dropdown-item" href="">Γραμμές οδικών συγκοινωνιών(λεωφορεία)</a>
-              <a class="dropdown-item" href="">Γραμμές σταθερών συγκοινωνιών(μετρό)</a>
-              <a class="dropdown-item" href="">Ωράριο λειτοθργίας Νυχτερινών - 24ώρων μέσων</a>
+              <a class="dropdown-item" href="">Γραμμές οδικών συγκοινωνιών (λεωφορεία)</a>
+              <a class="dropdown-item" href="">Γραμμές σταθερών συγκοινωνιών (μετρό)</a>
+              <a class="dropdown-item" href="">Ωράριο λειτοθργίας Νυχτερινών - 24ωρων μέσων</a>
               <a class="dropdown-item" href="">Πληροφόρηση σε πραγματικό χρόνο</a>
               <a class="dropdown-item" href="">Σταθμοί μετεπιβίβασης</a>
             </div>
@@ -111,10 +110,8 @@
               ΑμεΑ
             </button>
             <div ngbDropdownMenu class="dropdown-menu">
-              <a class="dropdown-item" href="">Σημεία έκδοσης στις Οδικές</a>
-              <a class="dropdown-item" href="">Σημεία έκδοσης στις Σταθερές</a>
-              <a class="dropdown-item" href="">Τιμές εισιτηρίων</a>
-              <a class="dropdown-item" href="">Τιμές χρονικών προϊόντων</a>
+              <a class="dropdown-item" href="">Εύρεση στάσεων με ράμπα</a>
+              <a class="dropdown-item" href="">Γενικές πληροφορίες ΑμεΑ</a>
             </div>
           </div>
 
@@ -125,9 +122,6 @@
             <div ngbDropdownMenu class="dropdown-menu">
               <a class="dropdown-item" href="">Γραμμές οδικών συγκοινωνιών(λεωφορεία)</a>
               <a class="dropdown-item" href="">Γραμμές σταθερών συγκοινωνιών(μετρό)</a>
-              <a class="dropdown-item" href="">Ωράριο λειτοθργίας Νυχτερινών - 24ώρων μέσων</a>
-              <a class="dropdown-item" href="">Πληροφόρηση σε πραγματικό χρόνο</a>
-              <a class="dropdown-item" href="">Σταθμοί μετεπιβίβασης</a>
             </div>
           </div>
 
@@ -138,10 +132,8 @@
               Επικοινωνία
             </button>
             <div ngbDropdownMenu class="dropdown-menu">
-              <a class="dropdown-item" href="">Σημεία έκδοσης στις Οδικές</a>
-              <a class="dropdown-item" href="">Σημεία έκδοσης στις Σταθερές</a>
-              <a class="dropdown-item" href="">Τιμές εισιτηρίων</a>
-              <a class="dropdown-item" href="">Τιμές χρονικών προϊόντων</a>
+              <a class="dropdown-item" href="">Επικοινωνία με φορείς</a>
+              <a class="dropdown-item" href="">Παράπονα</a>
             </div>
           </div>
 
@@ -165,10 +157,9 @@
               Σχετικά με Εμάς
             </button>
             <div ngbDropdownMenu class="dropdown-menu">
-              <a class="dropdown-item" href="">Σημεία έκδοσης στις Οδικές</a>
-              <a class="dropdown-item" href="">Σημεία έκδοσης στις Σταθερές</a>
-              <a class="dropdown-item" href="">Τιμές εισιτηρίων</a>
-              <a class="dropdown-item" href="">Τιμές χρονικών προϊόντων</a>
+              <a class="dropdown-item" href="">Πόσο χάλια σελίδα έχει ο ΟΑΣΑ</a>
+              <a class="dropdown-item" href="">ώστε να πρέπει να την φτιάξω από</a>
+              <a class="dropdown-item" href="">την αρχή μπας και πάρω πτυχίο<img src="/assets/heart.svg" width="22" height="22"></a>
             </div>
           </div>
 
