--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -1,8 +1,12 @@
 .bg {
-    height:auto;
-	min-height: 100vh;
-	width: auto;
+	position: relative;
 	background-image: url("/assets/blue_bg.jpg");
-	background-size: cover;
+	height: 1000px;
+	/* min-height: 100%; */
 	background-position: center;
+	background-repeat: no-repeat;
+	background-size: cover;
+	/* -webkit-background-size: cover;
+	-moz-background-size: cover;
+	-o-background-size: cover; */
   }
