--- a/src/app/mainpage/mainpage.component.css
+++ b/src/app/mainpage/mainpage.component.css
@@ -1,7 +1,7 @@
 .center {
-    border-color: rgb(201, 76, 76);
-    border-width: 2px; /* this allows you to adjust the thickness */
-    border-style: solid;
+    /* border-color: rgb(201, 76, 76);
+    border-width: 2px;
+    border-style: solid; */
     
     display: flex;
     justify-content: center;
@@ -20,4 +20,33 @@
     height: 170px;
     width: 51%;
     right: 0%;
+    border-radius: 25px;
+}
+
+.whereTo{
+    border-color: rgb(255, 255, 255);
+    border-width: 2px;
+    border-style: solid;
+
+    position: relative;
+    border-radius: 25px;
+    background: url('/assets/whereTo.jpg');
+    background-position: left top;
+    background-repeat: repeat;
+    background-size: 150%;
+    padding: 20px;
+    width: 300px;
+    height: 300px;
+    right: 18.25%;
+}
+
+.wtClass{
+    color: rgb(255, 255, 255);
+    font-family: "Times New Roman", Times, serif;
+}
+
+.submitrout{
+    position: relative;
+    bottom: 0px;
+    right: 0px;
 }
