--- a/src/app/mainpage/mainpage.component.html
+++ b/src/app/mainpage/mainpage.component.html
@@ -1,3 +1,24 @@
 <div class="center">
     <img src="/assets/bus.jpg" class="mainpagePic">
 </div>
+<div class="center">
+    <div class="whereTo">
+        <form class="form-inline">
+            <div class="wtClass">
+                Προς τα Που?
+            </div>
+            <br><br><br>
+            <div class="form-group mx-sm-3 mb-2">
+              <label for="inputPassword2" class="sr-only">From</label>
+              <input type="name" class="form-control" id="inputPassword2" placeholder="Αφετηρία">
+            </div>
+            <br>
+            <div class="form-group mx-sm-3 mb-2">
+              <label for="inputPassword2" class="sr-only">To</label>
+              <input type="name" class="form-control" id="inputPassword2" placeholder="Προορισμός">
+            </div>
+            <br>
+            <button type="submit" class="btn btn-primary mb-2">Εύρεση Διαδρομής</button>
+          </form>
+    </div>
+</div>
