--- a/src/app/global/global.component.html
+++ b/src/app/global/global.component.html
@@ -2,6 +2,7 @@
     <div class="oasapic">
         <img src="/assets/oasa1.png" routerLink='' width="70" height="70" title="Main Page">
     </div>
+    <!-- asd -->
     <div class="oasabar">
         <button *ngIf="greek" type="button" class="btn btn-dark">Ελληνικά</button>
         <button *ngIf="!greek" type="button" class="btn btn-light" (click)="changeLanguage()">Ελληνικά</button>
