--- a/src/app/mainpage/mainpage.component.html
+++ b/src/app/mainpage/mainpage.component.html
@@ -1,7 +1,7 @@
-<div class="center">
+<div class="center2">
     <img src="/assets/bus.jpg" class="mainpagePic">
 </div>
-<div class="center">
+<div class="center3">
     <div class="whereTo">
         <form class="form-inline">
             <div class="wtClass">
@@ -17,9 +17,32 @@
               <label for="inputPassword2" class="sr-only">To</label>
               <input type="name" class="form-control" id="inputPassword2" placeholder="Προορισμός">
             </div>
-            <br>
-            <button type="submit" class="btn btn-primary mb-2">Εύρεση Διαδρομής</button>
+            <!-- <input type="radio" value="AMEA" formControlName="SPECIAL NEED"><span>ΑμεΑ</span> -->
+            <br><br>
+            <button type="submit" class="btn btn-primary mb-2 submitrout">Εύρεση Διαδρομής</button>
           </form>
     </div>
 </div>
 
+<div class="center4">
+  <div class="anakoinoseis">
+
+    <nav aria-label="Page navigation example">
+      <ul class="pagination anakoinoseisPaging">
+        <li class="page-item"><a class="page-link">Previous</a></li>
+        <li class="page-item"><a class="page-link">1</a></li>
+        <li class="page-item"><a class="page-link">2</a></li>
+        <li class="page-item"><a class="page-link">3</a></li>
+        <li class="page-item"><a class="page-link">Next</a></li>
+      </ul>
+    </nav>
+  </div>
+</div>
+
+
+<!-- <div class="center">
+  <div class="roianakoinoseon">
+
+    
+  </div>
+</div> -->
