--- a/src/app/global/global.component.html
+++ b/src/app/global/global.component.html
@@ -28,8 +28,10 @@
 <div class="mpara center">
     <div class="fixmpara">
       <nav class="navbar navbar-expand-lg navbar-light bg-light"><!--  navbar-dark bg-primary -->
-        <button *ngIf='greek' type="button" class="btn btn-primary" routerLink=''>Κεντρική Σελίδα</button>
-        <button *ngIf='!greek' type="button" class="btn btn-primary" routerLink=''>Main Page</button>
+        <!-- <button *ngIf='greek' type="button" class="btn btn-primary" routerLink=''>Κεντρική Σελίδα</button>
+        <button *ngIf='!greek' type="button" class="btn btn-primary" routerLink=''>Main Page</button> -->
+        <button *ngIf='greek' type="button" class="btn btn-primary" routerLink=''><img src="/assets/house.svg" width="22" height="22"></button>
+        <button *ngIf='!greek' type="button" class="btn btn-primary" routerLink=''><img src="/assets/house.svg" width="22" height="22"></button>
         <div class="divider"></div>
 
         
