--- a/src/app/mainpage/mainpage.component.css
+++ b/src/app/mainpage/mainpage.component.css
@@ -60,6 +60,21 @@
   right: 12.5%;
 }
 
+.center5 {
+  border-color: rgb(201, 76, 76);
+  border-width: 2px;
+  border-style: solid;
+  
+  display: flex;
+  justify-content: center;
+  position: absolute;
+  margin: auto;
+  width: 25%;
+  height: 60%;
+  top: 37.8%;
+  right: 17.5%;
+}
+
 .divider{
     width: 5px;
     height: auto;
@@ -98,6 +113,7 @@
 .wtClass{
     color: rgb(255, 255, 255);
     font-family: "Times New Roman", Times, serif;
+    font-size: 25px;
 }
 
 .submitrout{
@@ -125,19 +141,20 @@
 
 .anakoinoseisPaging{
     border-color: rgb(0, 99, 192);
-    border-width: 1px;
+    border-width: 2px;
     border-style: solid;
     
     cursor: pointer;
     position: relative;
-    top: 10%;
-    width: 247px;
-    /* left: 175px; */
+    top: 0%;
+    width: 248px;
+    height: 40px;
+    left: 10%;
     
 }
 
 .roianakoinoseon{
-    border-color: rgb(255, 255, 255);
+    border-color: rgb(0, 0, 0);
     border-width: 2px;
     border-style: solid;
 
@@ -148,8 +165,8 @@
     background-repeat: repeat;
     background-size: 150%;
     padding: 20px;
-    width: 300px;
-    height: 650px;
-    left: 0%;
-    top: 170px;
+    width: 100%;
+    height: 100%;
+    /* left: 0%;
+    top: 170px; */
 }
