--- a/src/app/mainpage/mainpage.component.css
+++ b/src/app/mainpage/mainpage.component.css
@@ -1,7 +1,7 @@
 .center {
-    border-color: rgb(201, 76, 76);
+    /* border-color: rgb(201, 76, 76);
     border-width: 2px;
-    border-style: solid;
+    border-style: solid; */ 
     
     display: flex;
     justify-content: center;
@@ -14,9 +14,9 @@
   }
 
 .center2 {
-  border-color: rgb(201, 76, 76);
+  /* border-color: rgb(201, 76, 76);
   border-width: 2px;
-  border-style: solid;
+  border-style: solid; */
   
   display: flex;
   justify-content: center;
@@ -29,9 +29,9 @@
 }
 
 .center3 {
-  border-color: rgb(201, 76, 76);
+  /* border-color: rgb(201, 76, 76);
   border-width: 2px;
-  border-style: solid;
+  border-style: solid; */
   
   display: flex;
   justify-content: center;
@@ -45,9 +45,9 @@
 }
 
 .center4 {
-  border-color: rgb(201, 76, 76);
+  /* border-color: rgb(201, 76, 76);
   border-width: 2px;
-  border-style: solid;
+  border-style: solid; */
   
   display: flex;
   justify-content: center;
@@ -61,9 +61,9 @@
 }
 
 .center5 {
-  border-color: rgb(201, 76, 76);
+  /* border-color: rgb(201, 76, 76);
   border-width: 2px;
-  border-style: solid;
+  border-style: solid; */
   
   display: flex;
   justify-content: center;
@@ -71,7 +71,7 @@
   margin: auto;
   width: 25%;
   height: 60%;
-  top: 37.8%;
+  top: 37%;
   right: 17.5%;
 }
 
@@ -82,9 +82,9 @@
 }
 
 .mainpagePic{
-    border-color: rgb(255, 255, 255);
+    /* border-color: rgb(255, 255, 255);
     border-width: 2px;
-    border-style: solid;
+    border-style: solid; */
 
     position: relative;
     height: 170px;
@@ -94,9 +94,9 @@
 }
 
 .whereTo{
-    border-color: rgb(255, 255, 255);
+    /* border-color: rgb(255, 255, 255);
     border-width: 2px;
-    border-style: solid;
+    border-style: solid; */
 
     position: relative;
     border-radius: 25px;
@@ -117,15 +117,18 @@
 }
 
 .submitrout{
-    position: relative;
-    top: 20px;
-    left: 25%;
+  display: flex;
+  position: relative;
+  justify-content: center;
+  margin: auto;
+  top: 20px;
+  /* left: 25%; */
 }
 
 .anakoinoseis{
-    border-color: rgb(255, 255, 255);
+    /* border-color: rgb(255, 255, 255);
     border-width: 2px;
-    border-style: solid;
+    border-style: solid; */
 
     position: relative;
     border-radius: 25px;
@@ -140,9 +143,9 @@
 }
 
 .anakoinoseisPaging{
-    border-color: rgb(0, 99, 192);
+    /* border-color: rgb(0, 99, 192);
     border-width: 2px;
-    border-style: solid;
+    border-style: solid; */
     
     cursor: pointer;
     position: relative;
@@ -154,9 +157,9 @@
 }
 
 .roianakoinoseon{
-    border-color: rgb(0, 0, 0);
+    /* border-color: rgb(0, 0, 0);
     border-width: 2px;
-    border-style: solid;
+    border-style: solid; */
 
     position: relative;
     border-radius: 25px;
@@ -169,4 +172,36 @@
     height: 100%;
     /* left: 0%;
     top: 170px; */
+}
+
+.kentro{
+  /* border-color: rgb(225, 0, 255);
+  border-width: 2px;
+  border-style: solid; */
+  
+  
+  display: flex;
+  justify-content: center;
+  position: absolute;
+  margin: auto;
+  top: 37%;
+  width: 20%;
+  left: 37.5%;
+  height: 30%;
+}
+
+.kentroPic{
+  position: relative;
+  border-radius: 25px;
+  width: 100%;
+  height: 100%;
+}
+
+a.hover {
+  /* color: red; */
+  text-decoration: none;
+}
+
+a.hover:hover {
+  text-decoration: underline;
 }
