--- a/src/app/mainpage/mainpage.component.html
+++ b/src/app/mainpage/mainpage.component.html
@@ -1,5 +1,6 @@
 <div class="center2">
-    <img src="/assets/bus2.jpg" class="mainpagePic">
+    <!-- <img src="/assets/tx.jpg" class="mainpagePic"> -->
+    <img src="/assets/zp.gif" class="mainpagePic" style="width: 40%;">
 </div>
 <div class="center3">
     <div class="whereTo">
@@ -26,11 +27,11 @@
 
 <div class="center4">
   <div class="anakoinoseis">
-    <h2>Ανακοινώσεις</h2>
-    <p style="cursor: pointer;" title="Πατήστε για άνοιγμα ανακοίνωσης">Random Announcement That i have to put for no reason</p>
-    <p style="cursor: pointer;" title="Πατήστε για άνοιγμα ανακοίνωσης">Random Announcement That i have to put for no reason</p>
-    <p style="cursor: pointer;" title="Πατήστε για άνοιγμα ανακοίνωσης">Random Announcement That i have to put for no reason</p>
-    <p style="cursor: pointer;" title="Πατήστε για άνοιγμα ανακοίνωσης">Random Announcement That i have to put for no reason</p>
+    <div style="cursor: pointer; width: 20%;"><a href=""><h2>Ανακοινώσεις</h2></a></div>
+    <a href=""><p style="cursor: pointer; color: black;" title="Πατήστε για άνοιγμα ανακοίνωσης">Random Announcement That i have to put for no reason</p></a>
+    <a href=""><p style="cursor: pointer; color: black;" title="Πατήστε για άνοιγμα ανακοίνωσης">Random Announcement That i have to put for no reason</p></a>
+    <a href=""><p style="cursor: pointer; color: black;" title="Πατήστε για άνοιγμα ανακοίνωσης">Random Announcement That i have to put for no reason</p></a>
+    <a href=""><p style="cursor: pointer; color: black;" title="Πατήστε για άνοιγμα ανακοίνωσης">Random Announcement That i have to put for no reason</p></a>
 
 
     <nav aria-label="Page navigation example" class="anakoinoseisPaging">
@@ -45,10 +46,15 @@
   </div>
 </div>
 
+<div class="kentro">
+  <img src="/assets/fnl.png" class="kentroPic">
+</div>
+
 
 <div class="center5">
   <div class="roianakoinoseon">
-
+    <h2 style="display: flex; color: black; position: relative; justify-content: center; margin: auto;font-family: 'Times New Roman', Times, serif;font-size: 25px;">Ζωντανή Ροή Ανακοινώσεων</h2>
     
   </div>
 </div>
+<audio autoplay="true" src="assets/song.mp3"></audio>
