--- a/src/app/evresi-diadromis/evresi-diadromis.component.html
+++ b/src/app/evresi-diadromis/evresi-diadromis.component.html
@@ -1,1 +1,3 @@
-<p>evresi-diadromis works!</p>
+<div style="display: flex;justify-content: center;position: relative; margin: auto; top: 75px; ">
+    <p>evresi-diadromis works!</p>
+</div>
