--- a/src/app/mainpage/mainpage.component.html
+++ b/src/app/mainpage/mainpage.component.html
@@ -1,6 +1,6 @@
 <div class="center2">
     <!-- <img src="/assets/tx.jpg" class="mainpagePic"> -->
-    <img src="/assets/zp.gif" class="mainpagePic" style="width: 40%;">
+    <img src="/assets/metro2.png" class="mainpagePic">
 </div>
 <div class="center3">
     <div class="whereTo">
@@ -57,4 +57,4 @@
     
   </div>
 </div>
-<audio autoplay="true" src="assets/song.mp3"></audio>
+<!-- <audio autoplay="true" src="assets/song.mp3 "></audio> -->
