--- a/src/app/global/global.component.html
+++ b/src/app/global/global.component.html
@@ -137,7 +137,7 @@
             </button>
             <div ngbDropdownMenu class="dropdown-menu">
               <a class="dropdown-item" href="">Επικοινωνία με φορείς</a>
-              <a class="dropdown-item" href="">Παράπονα</a>
+              <a class="dropdown-item" href="parapona">Παράπονα</a>
             </div>
           </div>
 
