--- a/src/app/forma-paraponon/forma-paraponon.component.html
+++ b/src/app/forma-paraponon/forma-paraponon.component.html
@@ -1,1 +1,193 @@
-<p>forma-paraponon works!</p>
+<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01//EN" "http://www.w3.org/TR/html4/strict.dtd">
+<html class="supernova">
+
+<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" >
+
+<head>
+<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+<link rel="alternate" type="application/json+oembed" href="https://www.jotform.com/oembed/?format=json&amp;url=http%3A%2F%2Fwww.jotform.com%2Fform%2F193466934399376" title="oEmbed Form"><link rel="alternate" type="text/xml+oembed" href="https://www.jotform.com/oembed/?format=xml&amp;url=http%3A%2F%2Fwww.jotform.com%2Fform%2F193466934399376" title="oEmbed Form">
+<title>Online Complaint Form</title>
+<link href="https://cdn.jotfor.ms/static/formCss.css?3.3.14458" rel="stylesheet" type="text/css" />
+<link type="text/css" media="print" rel="stylesheet" href="https://cdn.jotfor.ms/css/printForm.css?3.3.14458" />
+<link type="text/css" rel="stylesheet" href="https://cdn.jotfor.ms/css/styles/nova.css?3.3.14458" />
+<link type="text/css" rel="stylesheet" href="https://cdn.jotfor.ms/themes/CSS/566a91c2977cdfcd478b4567.css?themeRevisionID=5dca5ac9a5e86d17235d90c1"/>
+</head>
+
+
+<body>
+<form class="ng-form" action="https://submit.jotform.com/submit/193466934399376/" method="post" name="form_193466934399376" id="193466934399376" accept-charset="utf-8">
+	<div role="main" class="form-all">
+		<ul class="form-section page-section">
+			<li class="form-line" data-type="control_textbox" id="id_3_5">
+				<label class="form-label form-label-left form-label-auto"
+					id="label_3_5" for="input_3_5"> Ημερομηνία Συμβάντος: </label>
+				<div class="input-group">
+					<input class="form-control" placeholder="dd-mm-yyyy" [minDate]="minDate"
+						[maxDate]="maxDate"
+						name="dp" [(ngModel)]="calendar_date" ngbDatepicker #d="ngbDatepicker">
+					<div class="input-group-append">
+						<button class="btn btn-outline-secondary calendar" (click)="d.toggle()" type="button"></button>
+					</div>	  
+				</div>
+			</li>
+			<li class="form-line" data-type="control_textbox" id="id_3_6">
+				<label class="form-label form-label-left form-label-auto" id="label_3_6" for="input_3_6"> Ώρα Συμβάντος: </label>
+				<div id="cid_3.6" class="form-input">
+					<ngb-timepicker [(ngModel)]="time" ></ngb-timepicker>
+				</div>
+			</li>
+			
+			<li class="form-line" data-type="control_textbox" id="id_4">
+				<label class="form-label form-label-left form-label-auto" id="label_5"
+				for="input_5">Μέσο: </label>
+				<div ngbDropdown class="btn-group">
+					<select class="browser-default custom-select">
+						<option selected>--Επιλογή--</option>
+						<optgroup label="ΣΤΑ.ΣΥ.">
+							<option>Γραμμη 1</option>
+							<option>Γραμμη 2</option>
+							<option>Γραμμη 3</option>
+							<option>Τραμ</option>
+						</optgroup>
+						<optgroup label="Ο.ΣΥ.">
+							<option>021</option>
+							<option>022</option>
+							<option>024</option>
+							<option>025</option>
+							<option>026</option>
+							<option>027</option>
+							<option>031</option>
+						</optgroup>
+					</select>
+				</div>
+			</li>
+
+			<li class="form-line" data-type="control_textbox" id="id_4">
+				<label class="form-label form-label-left form-label-auto" id="label_5"
+				for="input_5">Κατεύθυνση: </label>
+				<div ngbDropdown class="btn-group">
+					<select class="browser-default custom-select">
+						<option selected>--Επιλογή--</option>
+						<option value="1">Απο αφετηρία</option>
+						<option value="2">Απο Τέρμα</option>
+					</select>
+				</div>
+			</li>
+
+			<li class="form-line" data-type="control_textbox" id="id_4">
+				<label class="form-label form-label-left form-label-auto" id="label_5"
+				for="input_5"> Θεματική Ενότητα: </label>
+				<div ngbDropdown class="btn-group">
+					<select class="browser-default custom-select">
+						<option selected>--Επιλογή--</option>
+						<option value="1">Σημεία έλλειψης εισιτηρίων</option>
+						<option value="2">Στάσεις-στέγαστρα</option>
+					</select>
+				</div>
+			</li>
+
+			<li class="form-line" data-type="control_textarea" id="id_7">
+				<label class="form-label form-label-left form-label-auto" id="label_7"
+					for="input_7">Περιγραφή Συμβάντος:</label>
+				<div id="cid_7" class="form-input">
+					<textarea id="input_7" class="form-textarea" name="q7_theComplaint"
+					cols="40" rows="6" data-component="textarea" aria-labelledby="label_7"></textarea>
+				</div>
+			</li>
+
+			<li class="form-line" data-type="control_textarea" id="id_7">
+				<div ngbDropdown class="btn-group">
+				<label class="form-label form-label-left form-label-auto element" id="label"
+					for="input_7">Στοιχεία Επικοινωνίας:</label>
+				</div><br>
+				
+				<div ngbDropdown class="btn-group">
+					<input type="text" id="input1" name="q4_complainantsName"
+					data-type="input-textbox" class="form-textbox" size="20" value=""
+					placeholder=" " data-component="textbox" aria-labelledby="label_4" />
+					<input type="text" id="input2" name="q4_complainantsName"
+					data-type="input-textbox" class="form-textbox" size="20" value=""
+					placeholder=" " data-component="textbox" aria-labelledby="label_4" />
+					<input type="text" id="input3" name="q4_complainantsName"
+					data-type="input-textbox" class="form-textbox" size="20" value=""
+					placeholder=" " data-component="textbox" aria-labelledby="label_4" />
+				</div>
+
+				<div ngbDropdown class="btn-group">
+					<label class="form-label form-label-left form-label-auto " id="label1"
+						for="input_7">Όνομα</label>
+					<label class="form-label form-label-left form-label-auto " id="label2"
+						for="input_7">Επώνυμο</label>
+					<label class="form-label form-label-left form-label-auto " id="label3"
+						for="input_7">E-mail</label>
+				</div>
+
+				<div ngbDropdown class="btn-group">
+					<input type="text" id="input1" name="q4_complainantsName"
+					data-type="input-textbox" class="form-textbox" size="20" value=""
+					placeholder=" " data-component="textbox" aria-labelledby="label_4" />
+					<input type="text" id="input2" name="q4_complainantsName"
+					data-type="input-textbox" class="form-textbox" size="20" value=""
+					placeholder=" " data-component="textbox" aria-labelledby="label_4" />
+					<input type="text" id="input3" name="q4_complainantsName"
+					data-type="input-textbox" class="form-textbox" size="20" value=""
+					placeholder=" " data-component="textbox" aria-labelledby="label_4" />
+				</div>
+			
+			<div ngbDropdown class="btn-group">
+				<label class="form-label form-label-left form-label-auto " id="label1"
+				for="input_7">Τηλέφωνο</label>
+				<label class="form-label form-label-left form-label-auto " id="label2"
+				for="input_7">FAX</label>
+				<label class="form-label form-label-left form-label-auto " id="label3"
+				for="input_7">Αριθμός</label>
+			</div>
+
+			<div ngbDropdown class="btn-group">
+				<input type="text" id="input1" name="q4_complainantsName"
+				data-type="input-textbox" class="form-textbox" size="20" value=""
+				placeholder=" " data-component="textbox" aria-labelledby="label_4" />
+				<input type="text" id="input2" name="q4_complainantsName"
+				data-type="input-textbox" class="form-textbox" size="20" value=""
+				placeholder=" " data-component="textbox" aria-labelledby="label_4" />
+				<input type="text" id="input3" name="q4_complainantsName"
+				data-type="input-textbox" class="form-textbox" size="20" value=""
+				placeholder=" " data-component="textbox" aria-labelledby="label_4" />
+			</div>
+			
+			<div ngbDropdown class="btn-group">
+				<label class="form-label form-label-left form-label-auto " id="label1"
+				for="input_7">Οδός</label>
+				<label class="form-label form-label-left form-label-auto " id="label2"
+				for="input_7">Πολή</label>
+				<label class="form-label form-label-left form-label-auto " id="label3"
+				for="input_7">Δήμος</label>
+			</div>
+
+			<div ngbDropdown class="btn-group">
+				<input type="text" id="input1" name="q4_complainantsName"
+				data-type="input-textbox" class="form-textbox" size="20" value=""
+				placeholder=" " data-component="textbox" aria-labelledby="label_4" />
+			</div><br>
+
+			<div ngbDropdown class="btn-group">
+				<label class="form-label form-label-left form-label-auto " id="label1"
+				for="input_7">Ταχ. Κώδικας</label>
+			</div>
+
+			</li>
+
+			<li class="form-line" data-type="control_button" id="id_2">
+				<div id="cid_2" class="form-input-wide">
+					<div style="text-align:left" class="form-buttons-wrapper ">
+						<button type="button" class="btn btn-primary btn-sm">Send</button>
+					</div>
+				</div>
+			</li>
+
+		</ul>
+	</div>
+</form>
+
+</body>
+</html>
