added nuxterina component

--- a/src/app/global/global.component.html
+++ b/src/app/global/global.component.html
@@ -64,7 +64,7 @@
             <div ngbDropdownMenu class="dropdown-menu">
               <a class="dropdown-item" href="">Γραμμές οδικών συγκοινωνιών (λεωφορεία)</a>
               <a class="dropdown-item" href="">Γραμμές σταθερών συγκοινωνιών (μετρό)</a>
-              <a class="dropdown-item" href="">Ωράριο λειτοθργίας Νυχτερινών - 24ωρων μέσων</a>
+              <a class="dropdown-item" href="nuxterina">Ωράριο λειτοθργίας Νυχτερινών - 24ωρων μέσων</a>
               <a class="dropdown-item" href="">Πληροφόρηση σε πραγματικό χρόνο</a>
               <a class="dropdown-item" href="">Σταθμοί μετεπιβίβασης</a>
             </div>
