--- a/src/app/global/global.component.html
+++ b/src/app/global/global.component.html
@@ -91,6 +91,7 @@
               <a class="dropdown-item" href="">Σημεία έκδοσης στις Σταθερές</a>
               <a class="dropdown-item" href="">Τιμές εισιτηρίων</a>
               <a class="dropdown-item" href="">Τιμές χρονικών προϊόντων</a>
+              <a class="dropdown-item" href="agora">Αγορα Εισιτηρίων </a>
             </div>
           </div>
 
@@ -104,6 +105,7 @@
               <a class="dropdown-item" href="">Ωράριο λειτοθργίας Νυχτερινών - 24ώρων μέσων</a>
               <a class="dropdown-item" href="">Πληροφόρηση σε πραγματικό χρόνο</a>
               <a class="dropdown-item" href="">Σταθμοί μετεπιβίβασης</a>
+              <a class="dropdown-item" href="agora">Buy tickets</a>
             </div>
           </div>
 
