--- a/src/app/mainpage/mainpage.component.css
+++ b/src/app/mainpage/mainpage.component.css
@@ -37,11 +37,27 @@
   justify-content: center;
   position: relative;
   margin: auto;
-  width: 20%;
+  width: 30%;
   height: 300px;
   top: 75px;
   /* width: 65%; */
-  right: 22.5%;
+  right: 17.5%;
+}
+
+.center33 {
+  /* border-color: rgb(201, 76, 76);
+  border-width: 2px;
+  border-style: solid; */
+  
+  display: flex;
+  justify-content: center;
+  position: relative;
+  margin: auto;
+  width: 65%;
+  height: 300px;
+  top: 75px;
+  /* width: 65%; */
+  /* right: 17.5%; */
 }
 
 .center4 {
@@ -53,11 +69,11 @@
   justify-content: center;
   position: relative;
   margin: auto;
-  width: 40%;
+  width: 65%;
   height: 300px;
   top: 75px;
   /* width: 65%; */
-  right: 12.5%;
+  right: 0%;
 }
 
 .center5 {
@@ -70,7 +86,7 @@
   position: absolute;
   margin: auto;
   width: 25%;
-  height: 60%;
+  height: 30%;
   top: 37%;
   right: 17.5%;
 }
@@ -121,7 +137,7 @@
   position: relative;
   justify-content: center;
   margin: auto;
-  top: 20px;
+  top: 30px;
   /* left: 25%; */
 }
 
@@ -132,7 +148,7 @@
 
     position: relative;
     border-radius: 25px;
-    background: url('/assets/whitebg.jpg');
+    background: url('/assets/simple-grey.jpg');
     background-position: left top;
     background-repeat: repeat;
     background-size: 150%;
